# Pinta

./: .codespellrc  .dockerignore  .editorconfig  .gitattributes  .gitignore  .travis.yml  CHANGELOG.md  Directory.Build.props  Directory.Packages.props  Makefile  Makefile.am  Makefile.include  Pinta.2010.sln  Pinta.Install.proj  Pinta.sln  autogen.sh  buildlocales.bat  configure.ac  forge.md  gendarme.sh  launcher  license-mit.txt  license-pdn.txt  patch-guidelines.md  pinta.in  pinta.pc.in  readme.md  readme.txt  todo.txt
Pinta/: ActionHandlers.cs  AddinSetupService.cs  App.config  AssemblyInfo.cs  DialogHandlers.cs  DocumentViewContent.cs  ExtensionPoints.cs  IgeMacMenu.cs  Main.cs  MainWindow.cs  Makefile.am  Options.cs  Pinta.2010.csproj  Pinta.csproj  Platform.cs  SettingNames.cs  WindowShell.cs  pinta.in
Pinta.Core/: AssemblyInfo.cs  DialogResponses.cs  FriendAssemblies.cs  Makefile.am  Pinta.Core.2010.csproj  Pinta.Core.csproj  Pinta.Core.csproj~  PintaCore.cs  SettingNames.cs  Utilities.cs
Pinta.Core/Actions/: AddinActions.cs  AdjustmentsActions.cs  AppActions.cs  Command.cs  EditActions.cs  EffectsActions.cs  FileActions.cs  HelpActions.cs  ImageActions.cs  LayerActions.cs  ViewActions.cs  WindowActions.cs
Pinta.Core/Algorithms/: BlendOpHelper.cs  ClassicNoise.cs  ColorDifference.cs  HistogramRGB.cs  Julia.cs  Mandelbrot.cs  Mathematics.cs  PerlinNoise.cs  Sampling.cs  SpatialPartition.cs  Utility.cs
Pinta.Core/Classes/: AffineTransformation.cs  Angle.cs  AsyncEffectRenderer.cs  BaseBrushTool.cs  BaseExtension.cs  BasePaintBrush.cs  BaseTool.cs  BitMask.cs  BrightnessContrastAdjustment.cs  BrushStrokeArgs.cs  CanvasRenderer.cs  CenterOffset.cs  ColorBgra.cs  ColorGradient.cs  DialogAttributes.cs  DisposableLock.cs  DisposableUtilities.cs  Document.cs  DocumentHistory.cs  DocumentLayers.cs  DocumentProperties.cs  DocumentSelection.cs  DocumentWorkspace.cs  DocumentWorkspaceHistory.cs  Fraction.cs  GradientRenderer.cs  GradientRenderers.cs  GridRenderer.cs  HsvColor.cs  IColor.cs  IExtension.cs  IToolHandle.cs  IndexEventArgs.cs  IndexEventHandler.cs  Layer.cs  LayerProperties.cs  LockProvider.cs  Matrix2D.cs  Matrix3x2D.cs  Maybe.cs  (+23 more)
Pinta.Core/Clipper/: Clipper.cs  ClipperBase.cs
Pinta.Core/Delegates/: AsyncEventHandler.cs  AsyncReturningEventArgs.cs
Pinta.Core/Effects/: AutoLevelEffect.cs  BaseEffect.cs  BinaryPixelOp.cs  BitMask.cs  BitVector2DSurfaceAdapter.cs  BlackAndWhiteEffect.cs  ColorBgra.cs  ColorDifference.cs  ColorDifferenceEffect.cs  ColorGradient.cs  ColorMapping.cs  ColorTransferMode.cs  GradientRenderer.cs  GradientRenderers.cs  Histogram.cs  HistogramRGB.cs  HsvColor.cs  IBitVector2D.cs  IColorMapping.cs  ISurfaceDraw.cs  ImmutableColorGradient.cs  InvertColorsEffect.cs  IrregularSurface.cs  LocalHistogramEffect.cs  PixelOp.cs  PlacedSurface.cs  RandomSeed.cs  RgbColor.cs  Scanline.cs  SepiaEffect.cs  SplineInterpolator.cs  UnaryPixelOp.cs  UnaryPixelOps.cs  UserBlendOp.cs  UserBlendOps.Additive.cs  UserBlendOps.ColorBurn.cs  UserBlendOps.ColorDodge.cs  UserBlendOps.Darken.cs  UserBlendOps.Difference.cs  UserBlendOps.Generated.cs  (+12 more)
Pinta.Core/Enumeration/: PixelOffsetEnumeration.cs
Pinta.Core/Enumerations/: Anchor.cs  BlendMode.cs  CursorShape.cs  DistanceMetric.cs  EditingMode.cs  EffectAdjustment.cs  GradientColorMode.cs  MetricType.cs  MouseButton.cs  ResamplingMode.cs  Shape.cs  TextAlignment.cs  TextMode.cs
Pinta.Core/EventArgs/: BrushEventArgs.cs  CanvasInvalidatedEventArgs.cs  DocumentCancelEventArgs.cs  DocumentEventArgs.cs  DocumentSaveEventArgs.cs  HistoryItemAddedEventArgs.cs  HistoryItemHighlightEventArgs.cs  HistoryItemRemovedEventArgs.cs  IndexEventArgs.cs  LivePreviewEndedEventArgs.cs  LivePreviewRenderUpdatedEventArgs.cs  LivePreviewStartedEventArgs.cs  ModifyCompressionEventArgs.cs  TextChangedEventArgs.cs  ToolEventArgs.cs  ToolKeyEventArgs.cs  ToolMouseEventArgs.cs
Pinta.Core/Exceptions/: PaletteLoadException.cs
Pinta.Core/Extensions/: AddinUtilities.cs  CairoExtensions.cs  CairoExtensions.cs.orig  ColorExtensions.cs  DialogExtensions.cs  DisposableHelper.cs  GLibExtensions.cs  GdkExtensions.cs  GdkKey.cs  GdkPixbufExtensions.cs  GioExtensions.cs  GioStream.cs  GrapheneExtensions.cs  GskExtensions.cs  GtkExtensions.cs  IntlExtensions.cs  NativeImportResolver.cs  ObsoleteExtensions.cs  OtherExtensions.cs  PaletteHelper.cs  PangoExtensions.cs  Tiling.cs  ToolBarButton.cs  ToolBarComboBox.cs  ToolBarFontComboBox.cs  ToolBarImage.cs  ToolBarLabel.cs  ToolBarSlider.cs  ToolBarToggleButton.cs  ToolBarWidget.cs  ToolBoxButton.cs  WidgetExtensions.cs  XmlExtensions.cs
Pinta.Core/Models/: RulerModel.cs
Pinta.Effects/: .gitignore  CoreEffectsExtension.cs  FriendAssemblies.cs  GlobalSuppressions.cs  Makefile.am  Pinta.Effects.2010.csproj  Pinta.Effects.csproj  runtime.template.json
Pinta.Gui.Widgets/: .gitignore  AssemblyInfo.cs  DialogAttributes.cs  Makefile.am  Pinta.Gui.Widgets.2010.csproj  Pinta.Gui.Widgets.csproj  WrappingPaletteContainer.cs
Pinta.Resources/: .gitignore  AssemblyInfo.cs  Icons.cs  Makefile.am  Pinta.Resources.csproj  ResourceManager.cs  Styles.cs
Pinta.Tools/: BaseBrushTool.cs  CloneStampTool.cs  ColorPickerTool.cs  CoreToolsExtension.cs  EllipseSelectTool.cs  EllipseTool.cs  EraserTool.cs  FloodTool.cs  FreeformShapeTool.cs  GradientTool.cs  LassoSelectTool.cs  LineCurveTool.cs  MagicWandTool.cs  Makefile.am  MoveSelectedTool.cs  MoveSelectionTool.cs  PaintBrushTool.cs  PaintBucketTool.cs  PanTool.cs  PencilTool.cs  Pinta.Tools.2010.csproj  Pinta.Tools.csproj  RecolorTool.cs  RectangleSelectTool.cs  RectangleTool.cs  RoundedRectangleTool.cs  SelectTool.cs  SettingNames.cs  ShapeTool.cs  TextTool.cs  UnimplementedTools.cs  ZoomTool.cs
System.ComponentModel.Composition/: ComponentModel.csproj  Makefile.am  Strings.Designer.cs  SuppressMessagesBaselined.cs  System.ComponentModel.Composition.csproj
help/: Makefile.am
xdg/: Makefile.am  com.github.PintaProject.Pinta.desktop.in  com.github.PintaProject.Pinta.metainfo.xml.in  pinta.1  pinta.appdata.xml.in  pinta.desktop  pinta.desktop.in  pinta.xpm
(+1003 files in other folders)
