include $(top_srcdir)/Makefile.include

ASSEMBLY = Pinta.Core
TARGET = library
ASSEMBLY_BUILD_FLAGS = -unsafe

REFERENCES = \
	-r:Mono.Posix \
	-r:System \
	-r:System.Core \
	-r:System.Data \
	-r:System.Xml \
	$(GTK_SHARP_20_LIBS) \
	$(GLIB_SHARP_20_LIBS) \
	$(MONO_CAIRO_LIBS) \
	-r:../lib/ICSharpCode.SharpZipLib.dll \
	-r:../bin/Pinta.Resources.dll

SOURCES =  \
	Actions/EffectsActions.cs \
	AssemblyInfo.cs \
	Classes/Anchor.cs \
	Classes/DocumentWorkspaceHistory.cs \
	Classes/Document.cs \
	Classes/DocumentWorkspace.cs \
	Classes/ScaleFactor.cs \
	Classes/Palette.cs \
	Effects/BaseEffect.cs \
	Effects/BinaryPixelOp.cs \
	Effects/BitVector2DSurfaceAdapter.cs \
	Effects/Histogram.cs \
	Effects/HistogramRGB.cs \
	Effects/IBitVector2D.cs \
	Effects/Scanline.cs \
	Effects/UserBlendOp.cs \
	Effects/UserBlendOps.cs \
	Effects/UserBlendOps.Generated.cs \
	Enumerations/EffectAdjustment.cs \
	Enumerations/GradientColorMode.cs \
	EventArgs/CanvasInvalidatedEventArgs.cs \
	EventArgs/DocumentEventArgs.cs \
	EventArgs/HistoryItemAddedEventArgs.cs \
	EventArgs/HistoryItemRemovedEventArgs.cs \
	EventArgs/TextChangedEventArgs.cs \
	Extensions/ToolBarSlider.cs \
	HistoryItems/ResizeHistoryItem.cs \
	HistoryItems/FinishPixelsHistoryItem.cs \
	HistoryItems/MovePixelsHistoryItem.cs \
	HistoryItems/SelectionHistoryItem.cs \
	HistoryItems/BaseHistoryItem.cs \
	HistoryItems/CompoundHistoryItem.cs \
	HistoryItems/AddLayerHistoryItem.cs \
	HistoryItems/SwapLayersHistoryItem.cs \
	HistoryItems/DeleteLayerHistoryItem.cs \
	HistoryItems/InvertHistoryItem.cs \
	HistoryItems/SimpleHistoryItem.cs \
	Managers/ActionManager.cs \
	Managers/ChromeManager.cs \
	Managers/HistoryManager.cs \
	Managers/LayerManager.cs \
	Managers/PaletteManager.cs \
	Managers/ResourceManager.cs \
	Managers/SettingsManager.cs \
	Managers/SystemManager.cs \
	Managers/ToolManager.cs \
	Managers/WorkspaceManager.cs \
	PintaCore.cs \
	Extensions/CairoExtensions.cs \
	Extensions/GdkExtensions.cs \
	Extensions/GtkExtensions.cs \
	Classes/Layer.cs \
	Extensions/ToolBarButton.cs \
	Extensions/ToolBarComboBox.cs \
	Extensions/ToolBarImage.cs \
	Extensions/ToolBarLabel.cs \
	Actions/LayerActions.cs \
	Actions/FileActions.cs \
	Actions/EditActions.cs \
	Actions/ViewActions.cs \
	Actions/ImageActions.cs \
	Actions/AdjustmentsActions.cs \
	Actions/HelpActions.cs \
	Effects/ColorBgra.cs \
	Effects/UnaryPixelOps.cs \
	Effects/UnaryPixelOp.cs \
	Effects/PixelOp.cs \
	Effects/Utility.cs \
	Effects/HsvColor.cs \
	Effects/RgbColor.cs \
	Classes/BaseTool.cs \
	Extensions/ToolBarToggleButton.cs \
	HistoryItems/UpdateLayerPropertiesHistoryItem.cs \
	Classes/ObservableObject.cs \
	Classes/LayerProperties.cs \
	Effects/ColorTransferMode.cs \
	Effects/SplineInterpolator.cs \
	Extensions/OtherExtensions.cs \
	Effects/IrregularSurface.cs \
	Effects/ISurfaceDraw.cs \
	Effects/PlacedSurface.cs \
	HistoryItems/ClippedSurfaceHistoryItem.cs \
	Classes/IndexEventHandler.cs \
	Classes/IndexEventArgs.cs \
	Effects/LocalHistogramEffect.cs \
	Effects/ColorDifferenceEffect.cs \
	EventArgs/LivePreviewEndedEventArgs.cs \
	EventArgs/LivePreviewRenderUpdatedEventArgs.cs \
	EventArgs/LivePreviewStartedEventArgs.cs \
	EventArgs/ModifyCompressionEventArgs.cs \
	Managers/LivePreviewManager.cs \
	Classes/AsyncEffectRenderer.cs \
	Classes/GradientRenderer.cs \
	Classes/GradientRenderers.cs \
	ImageFormats/OraFormat.cs \
	ImageFormats/GdkPixbufFormat.cs \
	ImageFormats/JpegFormat.cs \
	ImageFormats/IImageExporter.cs \
	ImageFormats/IImageImporter.cs \
	ImageFormats/FormatDescriptor.cs \
	ImageFormats/TgaExporter.cs \
	Classes/BasePaintBrush.cs \
	Managers/PaintBrushManager.cs \
	Widgets/MenuButton.cs \
	Widgets/ToolBarDropDownButton.cs

